--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <body>
 	<header class="site-header">
 	    <div class="container">
-		<img class="logo-img" src="./dist/img/main-logo.png"  alt="Journey Finance">
+		<img class="logo-img" src="./dist/img/main-logo.png"  alt="Student Degree Programs">
 	    </div>
 	</header>
 	<div class="main-content">
 	    <div class="content-section text-center">
 		<div class="container">
-		    <h1>Find Local & Online Teaching Programs!</h1>
+		    <div class="page-header">
+			<h1>Find Local & Online Teaching Programs!</h1>
+			<div class="sub-heading">Fill out our 1-minute form!</div>
+			<div class="arrow-wrp"><img src="./dist/img/arrow.png"  alt="Fill out our 1-minute form"></div>
+		    </div>
 		    <form id="regForm" action="/">
 			<div class="tab">
 			    <h3 class="mb-1">Do you live in the United States? *</h3>
@@ -35,13 +39,13 @@
 			    <h3 class="mb-1">What level of education have you completed *</h3>
 			    <div class="form-group">
 				<select class="form-control" name="what_level_of_education_have_you_completed">
-				  <option value="">-- Select --</option>
-				  <option value="Still in High School">Still in High School</option>
-				  <option value="High School Diploma">High School Diploma</option>
-				  <option value="Some College">Some College</option>
-				  <option value="Bachelors Degree">Bachelors Degree</option>
-				  <option value="Masters Degree">Masters Degree</option>
-				  <option value="Doctoral Degree">Doctoral Degree</option>
+				    <option value="">-- Select --</option>
+				    <option value="Still in High School">Still in High School</option>
+				    <option value="High School Diploma">High School Diploma</option>
+				    <option value="Some College">Some College</option>
+				    <option value="Bachelors Degree">Bachelors Degree</option>
+				    <option value="Masters Degree">Masters Degree</option>
+				    <option value="Doctoral Degree">Doctoral Degree</option>
 				</select>
 			    </div>
 			    <button type="button" class="btn btn-secondary" onclick="nextPrev(1)">Continue</button>
