--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				    <option value="No">No</option>
 				</select>
 			    </div>
-			    <button type="button" class="btn btn-secondary" onclick="nextPrev(1)">Continue</button>
+			    <button type="button" class="btn btn-primary" onclick="nextPrev(1)">Continue</button>
 			</div>
 			<div class="tab">
 			    <h3 class="mb-1">What level of education have you completed *</h3>
@@ -48,7 +48,7 @@
 				    <option value="Doctoral Degree">Doctoral Degree</option>
 				</select>
 			    </div>
-			    <button type="button" class="btn btn-secondary" onclick="nextPrev(1)">Continue</button>
+			    <button type="button" class="btn btn-primary" onclick="nextPrev(1)">Continue</button>
 			</div>
 			<div class="tab">
 			    <h3 class="mb-1">What is your classroom preference? *</h3>
@@ -60,7 +60,7 @@
 				    <option value="Both (Online/Campus)">Both (Online/Campus)</option>
 				</select>
 			    </div>
-			    <button type="button" class="btn btn-secondary" onclick="nextPrev(1)">CONTINUE</button>
+			    <button type="button" class="btn btn-primary" onclick="nextPrev(1)">CONTINUE</button>
 			</div>
 			<div class="tab">
 			    <h3 class="mb-1">When would you like to start? *</h3>
@@ -73,7 +73,7 @@
 				    <option value="6+ Months">6+ Months</option>
 				</select>
 			    </div>
-			    <button type="button" class="btn btn-secondary" onclick="nextPrev(1)">CONTINUE</button>
+			    <button type="button" class="btn btn-primary" onclick="nextPrev(1)">CONTINUE</button>
 			</div>
 			<div class="tab">
 			    <div class="form-box">
@@ -82,7 +82,7 @@
 				    <input id="email" class="form-control"  type="email" placeholder="Enter your email here to continue">
 				</div>
 				<div class="text-center">
-				    <button type="button" class="btn btn-secondary">CONTINUE</button>
+				    <button type="button" class="btn btn-primary">CONTINUE</button>
 				</div>
 			    </div>
 			</div>
@@ -91,6 +91,8 @@
 			    <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
 			</div>
 			<div style="display: none;">
+			    <span class="step"></span>
+			    <span class="step"></span>
 			    <span class="step"></span>
 			    <span class="step"></span>
 			    <span class="step"></span>
