--- a/index.html
+++ b/index.html
@@ -101,18 +101,49 @@
 		</div>
 	    </div>
 	</div>
-	<div class="site-footer">
+	<div class="info-wrp">
 	    <div class="container">
 		<div class="row">
 		    <div class="col">
-			<ul>
-			    <li><a href="https://www.studentdegreeprograms.com/privacy/" target="_self">Privacy Policy</a></li>
-			    <li><a href="mailto:support@studentdegreeprograms.com" target="_self">Contact</a></li>
-			    <li><a href="https://www.studentdegreeprograms.com/termsandconditions/" target="_self">Terms of Use</a></li>
-			</ul>
+			<div class="box">
+			    <div class="icon">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
+				<path d="M208 208h-16v32h16c8.832 0 16-7.168 16-16s-7.168-16-16-16z"></path>
+				<path d="M256 0C114.848 0 0 114.848 0 256s114.848 256 256 256 256-114.848 256-256S397.152 0 256 0zM120.224 120.224C156.512 83.968 204.704 64 256 64s99.488 19.968 135.744 56.224c6.24 6.24 6.24 16.384 0 22.624s-16.384 6.24-22.624 0C338.912 112.64 298.72 96 256 96s-82.912 16.64-113.152 46.848c-3.104 3.136-7.2 4.704-11.296 4.704s-8.192-1.568-11.328-4.704c-6.24-6.24-6.24-16.352 0-22.624zM336 240c8.832 0 16 7.168 16 16s-7.168 16-16 16h-16v32h16c8.832 0 16 7.168 16 16s-7.168 16-16 16h-32c-8.832 0-16-7.168-16-16V192c0-8.832 7.168-16 16-16h32c8.832 0 16 7.168 16 16s-7.168 16-16 16h-16v32h16zm-83.2 70.4c5.312 7.072 3.872 17.088-3.2 22.4-2.88 2.144-6.24 3.2-9.568 3.2-4.864 0-9.664-2.208-12.8-6.4L192 282.656V320c0 8.832-7.168 16-16 16s-16-7.168-16-16V192c0-8.832 7.168-16 16-16h32c26.464 0 48 21.536 48 48 0 21.504-14.304 39.52-33.792 45.6l30.592 40.8zM96 272v48c0 8.832-7.168 16-16 16s-16-7.168-16-16V192c0-8.832 7.168-16 16-16h32c8.832 0 16 7.168 16 16s-7.168 16-16 16H96v32h16c8.832 0 16 7.168 16 16s-7.168 16-16 16H96zm295.744 119.744C355.488 428.032 307.296 448 256 448c-51.296 0-99.488-19.968-135.776-56.256-6.24-6.24-6.24-16.384 0-22.624s16.384-6.24 22.624 0C173.088 399.328 213.28 416 256 416s82.912-16.672 113.12-46.88c6.24-6.24 16.384-6.24 22.624 0s6.272 16.384 0 22.624zM432 304c8.832 0 16 7.168 16 16s-7.168 16-16 16h-32c-8.832 0-16-7.168-16-16V192c0-8.832 7.168-16 16-16h32c8.832 0 16 7.168 16 16s-7.168 16-16 16h-16v32h16c8.832 0 16 7.168 16 16s-7.168 16-16 16h-16v32h16z"></path>
+				</svg>
+			    </div>
+			    <div class="text">
+				<h4>Learn about financial aid</h4>
+				<p>Grants, Scholarships, Loans, etc. may be available to those who qualify.</p>
+			    </div>
+			</div>
 		    </div>
-		    <div class="col">© 2021 Student Degree Programs All Rights Reserved</div>
+		    <div class="col">
+			<div class="box">
+			    <div class="icon">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 486 486" fill="currentColor">
+				<path d="M243 0C108.8 0 0 108.8 0 243s108.8 243 243 243 243-108.8 243-243S377.2 0 243 0zm69.8 338.8c-10.6 12.9-24.4 21.6-40.5 26-7 1.9-10.2 5.6-9.8 12.9.3 7.2 0 14.3-.1 21.5 0 6.4-3.3 9.8-9.6 10-4.1.1-8.2.2-12.3.2-3.6 0-7.2 0-10.8-.1-6.8-.1-10-4-10-10.6-.1-5.2-.1-10.5-.1-15.7-.1-11.6-.5-12-11.6-13.8-14.2-2.3-28.2-5.5-41.2-11.8-10.2-5-11.3-7.5-8.4-18.3 2.2-8 4.4-16 6.9-23.9 1.8-5.8 3.5-8.4 6.6-8.4 1.8 0 4.1.9 7.2 2.5 14.4 7.5 29.7 11.7 45.8 13.7 2.7.3 5.4.5 8.1.5 7.5 0 14.8-1.4 21.9-4.5 17.9-7.8 20.7-28.5 5.6-40.9-5.1-4.2-11-7.3-17.1-10-15.7-6.9-32-12.1-46.8-21-24-14.4-39.2-34.1-37.4-63.3 2-33 20.7-53.6 51-64.6 12.5-4.5 12.6-4.4 12.6-17.4 0-4.4-.1-8.8.1-13.3.3-9.8 1.9-11.5 11.7-11.8H246c18.6 0 18.6.8 18.7 20.9.1 14.8.1 14.8 14.8 17.1 11.3 1.8 22 5.1 32.4 9.7 5.7 2.5 7.9 6.5 6.1 12.6-2.6 9-5.1 18.1-7.9 27-1.8 5.4-3.5 7.9-6.7 7.9-1.8 0-4-.7-6.8-2.1-14.4-7-29.5-10.4-45.3-10.4-2 0-4.1.1-6.1.2-4.7.3-9.3.9-13.7 2.8-15.6 6.8-18.1 24-4.8 34.6 6.7 5.4 14.4 9.2 22.3 12.5 13.8 5.7 27.6 11.2 40.7 18.4 41.2 23 52.4 75.3 23.1 110.9z"></path>
+				</svg>
+			    </div>
+			    <div class="text">
+				<h4>Answer your questions</h4>
+				<p>Fill out our easy, 1-minute form and get answers and valuable information FREE.</p>
+			    </div>
+			</div>
+		    </div>
 		</div>
+	    </div>
+	</div>
+	<div class="site-footer">
+	    <div class="container">
+		<hr>
+		<div class="offer">* This is an education offer not related to any jobs, promotions, or rewards. Prospective students should discuss these options with a school representative, as this site does not determine eligibility for financial aid. Financial aid is available to those who qualify. Current education grant information is available at <a href="https://studentaid.ed.gov/sa/types/grants-scholarships/pell">https://studentaid.ed.gov/sa/types/grants-scholarships/pell</a></div>
+		<ul>
+		    <li><a href="https://www.studentdegreeprograms.com/privacy/" target="_self">Privacy Policy</a></li>
+		    <li><a href="mailto:support@studentdegreeprograms.com" target="_self">Contact</a></li>
+		    <li><a href="https://www.studentdegreeprograms.com/termsandconditions/" target="_self">Terms of Use</a></li>
+		</ul>
+		<div class="copy">© 2021 Student Degree Programs All Rights Reserved</div>
 	    </div>
 	</div>
 	<script
